--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				
 		<!-- Authors Alphabetical Order -->
 		<meta name="author" content="Adam Mutimer, Channon Harper, Daniel Scarfe, Jorge Esteban, Madeleine Dupree, Samuel Mennen" />
-		<title>COSC2196 - Assessment 2: The Fighting Mongooses</title>
+		<title>COSC2196 - Assessment 5: The Fighting Mongooses</title>
 		<link rel="icon" type="image/x-icon" href="images/mongoose.ico" />
 
 		<!-- Google Font Payloads -->
@@ -20,6 +20,22 @@
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">	
 		
 		<style>
+			body {
+				background-color: #2C2F33; /* Dark but not Black */
+				color: #FFFFFF;
+				font-family: 'Open Sans', sans-serif;
+				font-size: medium;
+				font-weight: lighter;
+			}
+
+			h1, h2, h3, h4, h5, h6 {
+				font-family: 'Quicksand', sans-serif;
+				text-transform: uppercase;
+				font-weight: 700;
+				margin-bottom: .5rem;
+				line-height: 1.2;
+				text-align: center;
+			}
 			.center { 
 				margin: auto;
 				width: 50%;
@@ -29,6 +45,9 @@
 	</head>
 	<body>
 		<div class="center">
+			<h1>The Fighting Mongooses</h1>
+			<h3>Assessment 5: Presentation</h3>
+			<br />
 			<video controls="" preload="metadata" width="960" height="540">
 				<source src="https://raw.githubusercontent.com/AdamM-AU/COSC2196_A5/master/Images/2020_1114_135724_046.MP4" type="video/mp4">
 				Your browser does not support the video tag.
