--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				font-size: medium;
 				font-weight: lighter;
 			}
+			
+			a {
+				color: #FFFFFF;
+			}
 
 			h1, h2, h3, h4, h5, h6 {
 				font-family: 'Quicksand', sans-serif;
@@ -52,6 +56,7 @@
 				<source src="https://raw.githubusercontent.com/AdamM-AU/COSC2196_A5/master/Presentation%20video/Assessment%205.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
+			<h4>YouTube: <a href="https://youtu.be/7hkiW8MiNsQ">https://youtu.be/7hkiW8MiNsQ</a></h4>
 		</div>
 	</body>
 </html>
